[gd_scene load_steps=18 format=3 uid="uid://dxx3fi3x76vsk"]

[ext_resource type="Script" uid="uid://bde8ddtmb30ad" path="res://addons/CustomControls/Dialogs/script_text_editor.gd" id="1_ud20o"]
[ext_resource type="CodeHighlighter" uid="uid://c7mbnjy7jf0hv" path="res://addons/CustomControls/Resources/Other/code_hightlighter.tres" id="2_3f0q4"]
[ext_resource type="PackedScene" uid="uid://bealtmarqhbfs" path="res://addons/CustomControls/custom_option_button.tscn" id="2_4u6ti"]
[ext_resource type="Script" uid="uid://cd2kyhn84gf8a" path="res://addons/CustomControls/Dialogs/intelligent_code_edit.gd" id="2_fp5ii"]
[ext_resource type="PackedScene" uid="uid://bnx7omk3joxly" path="res://addons/CustomControls/custom_button.tscn" id="3_7dday"]
[ext_resource type="Texture2D" uid="uid://btjtps7r83y2t" path="res://addons/CustomControls/Images/buttons.png" id="3_ucuyc"]
[ext_resource type="PackedScene" uid="uid://cm2u4auw5aji5" path="res://addons/CustomControls/Dialogs/select_color.tscn" id="5_86mhd"]

[sub_resource type="Gradient" id="Gradient_u5yrp"]
colors = PackedColorArray(0.184314, 0.2, 0.207843, 1, 0.278431, 0.294118, 0.301961, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_i72rj"]
gradient = SubResource("Gradient_u5yrp")
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_08t18"]
atlas = ExtResource("3_ucuyc")
region = Rect2(168, 72, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xj08y"]
atlas = ExtResource("3_ucuyc")
region = Rect2(48, 192, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_uelht"]
atlas = ExtResource("3_ucuyc")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2f55"]
atlas = ExtResource("3_ucuyc")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdf7y"]
atlas = ExtResource("3_ucuyc")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngneg"]
atlas = ExtResource("3_ucuyc")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5b1pv"]
atlas = ExtResource("3_ucuyc")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jq5h7"]
atlas = ExtResource("3_ucuyc")
region = Rect2(48, 0, 24, 24)

[node name="ScriptTextEditor" type="Window"]
oversampling_override = 1.0
title = "Script"
position = Vector2i(0, 36)
size = Vector2i(800, 600)
transient_to_focused = true
exclusive = true
script = ExtResource("1_ud20o")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_i72rj")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Select Preset:"

[node name="PresetButton" parent="MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("2_4u6ti")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Select one of the included presets"
selected = 0
item_count = 1
popup/item_0/text = "Add All Items"
popup/item_0/id = 0

[node name="ApplyScriptPreset" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "Replaces the content of the current script with that of the preset.."
mouse_default_cursor_shape = 2
texture_normal = SubResource("AtlasTexture_08t18")
texture_hover = SubResource("AtlasTexture_xj08y")

[node name="RemoveScriptPreset" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "Remove the selected preset"
mouse_default_cursor_shape = 2
disabled = true
texture_normal = SubResource("AtlasTexture_uelht")
texture_hover = SubResource("AtlasTexture_f2f55")
texture_disabled = SubResource("AtlasTexture_wdf7y")

[node name="SaveScriptPreset" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "Add the current content of the script as a preset.
You must give a unique name to the new preset,
or it will not be saved if a preset with that name already exists."
mouse_default_cursor_shape = 2
texture_normal = SubResource("AtlasTexture_ngneg")
texture_hover = SubResource("AtlasTexture_5b1pv")
texture_disabled = SubResource("AtlasTexture_jq5h7")

[node name="CodeEdit" type="CodeEdit" parent="MarginContainer/VBoxContainer" node_paths=PackedStringArray("color_dialog")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
caret_blink = true
syntax_highlighter = ExtResource("2_3f0q4")
code_completion_enabled = true
indent_automatic = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true
script = ExtResource("2_fp5ii")
color_dialog = NodePath("../../../SelectColor")

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 2

[node name="OKButton" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_7dday")]
unique_name_in_owner = true
custom_minimum_size = Vector2(210, 0)
layout_mode = 2
tooltip_text = "[title]Ok[/title]
Saves all changes and closes the windows."
text = "OK"

[node name="CancelButton" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_7dday")]
unique_name_in_owner = true
custom_minimum_size = Vector2(210, 0)
layout_mode = 2
tooltip_text = "[title]Cancel[/title]
Closes this window without saving any changes."
text = "CANCEL"

[node name="SelectColor" parent="." instance=ExtResource("5_86mhd")]
unique_name_in_owner = true
oversampling_override = 1.0
size = Vector2i(322, 686)
visible = false
exclusive = false
popup_window = true

[connection signal="item_selected" from="MarginContainer/VBoxContainer/HBoxContainer2/PresetButton" to="." method="_on_preset_button_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/ApplyScriptPreset" to="." method="_on_apply_script_preset_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/RemoveScriptPreset" to="." method="_on_remove_script_preset_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/SaveScriptPreset" to="." method="_on_save_script_preset_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/OKButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
